--- a/app/src/main/res/layout/item_payment.xml
+++ b/app/src/main/res/layout/item_payment.xml
@@ -7,10 +7,10 @@
 
     <TextView
         android:id="@+id/tvLine1"
-        android:textStyle="bold"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text=""/>
+        android:text=""
+        android:textStyle="bold" />
 
     <TextView
         android:id="@+id/tvLine2"
