--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -4,5 +4,6 @@
     <item
         android:id="@+id/action_history"
         android:title="@string/menu_history"
-        app:showAsAction="never" />
+        app:showAsAction="ifRoom|withText"
+        />
 </menu>
